# porchlight

./: .gitignore  HARDCODED_STRINGS_REFERENCE.txt  LICENSE  LOCALIZATION_AUDIT_FULL_REPORT.md  LOCALIZATION_AUDIT_SUMMARY.md  LOCALIZATION_STRINGS_TEMPLATE.swift  PRIVACY_POLICY.md  Package.swift  README.md  TERMS_OF_USE.md
.github/: RELEASE_WORKFLOW.md
.github/scripts/: recreate_xcode_cloud_workflow.py  trigger_xcode_cloud_build.py
.github/workflows/: ci-cli.yml  ci-macos.yml  ci.yml  prepare-release.yml  release-cli.yml  release-macos-direct.yml  release-macos.yml  release.yml
Tests/PortlightTests/: PortlightTests.swift
apps/macos/: Package.swift  README.md  exportOptions-developer-id.plist
apps/macos/Porchlight/: AppDelegate.swift  Info-Sparkle.plist  SettingsWindowController.swift  StatusBarController.swift  StatusMenuBuilder.swift
apps/macos/Porchlight.icon/: icon.json
apps/macos/Porchlight.xcodeproj/: project.pbxproj
apps/macos/Porchlight/App/: AppDelegate.swift  SettingsWindowController.swift  StatusBarController.swift
apps/macos/PorchlightTests/: AppSettingsTests.swift  BuildInfoTests.swift  LocalServerTests.swift  ServerGroupTests.swift
apps/macos/ci_scripts/: ci_post_clone.sh  ci_pre_xcodebuild.sh
apps/macos/docs/: PRIVACY_POLICY.md  PRODUCT_METADATA.md  TERMS_OF_USE.md  XCODE_CLOUD_SETUP.md  xcode-cloud-workflow.json
cli/: Cargo.toml  README.md
cli/src/: classification.rs  classification_rules.json  config.rs  main.rs  model.rs  server_types.json  state.rs  tui.rs
cli/src/scanner/: macos.rs  mod.rs  windows.rs
scripts/: release.sh
(+50 files in other folders)
