[package]
name = "porchlight"
version = "0.1.5"
edition = "2021"
description = "Discover, inspect, and manage local development servers running on your Mac."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/tylerharden/porchlight"
keywords = ["cli", "localhost", "dev-server", "process", "macos"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
